--- a/public/css/player.css
+++ b/public/css/player.css
@@ -832,26 +832,35 @@ h2 {
   position: relative;
   width: 100px;
   height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .stopwatch-icon {
   font-size: 80px !important;
   color: #333;
-  position: relative;
+  position: absolute;
   z-index: 1;
+  /* アイコンを中央に配置 */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .stopwatch-animation {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  width: 90px;
+  height: 90px;
   border: 3px solid #007bff;
   border-radius: 50%;
   border-top-color: transparent;
   animation: spin 2s linear infinite;
   z-index: 0;
+  /* アニメーションを中央に配置 */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @keyframes spin {
