--- a/public/css/display.css
+++ b/public/css/display.css
@@ -439,6 +439,21 @@ h3 {
   font-weight: 700;
 }
 
+/* ランキング導入メッセージの文字サイズ拡大 */
+.ranking-intro-message {
+  width: 90%;
+  max-width: 1200px;
+  margin: 40px auto;
+}
+
+.ranking-intro-message p {
+  font-size: 48px; /* より大きなフォントサイズ */
+  font-weight: 700;
+  line-height: 1.5;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .correct-count {
   color: #0055cc;
   font-weight: 800;
